--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -11,7 +11,7 @@
       "source": [
         "#@title { form-width: \"2%\" }\n",
         "#@markdown\n",
-        "# chk 00\n",
+        "# chk 00-1\n",
         "\n",
         "dev = False\n",
         "\n",
@@ -1163,7 +1163,7 @@
         "    full_size = 0\n",
         "    download_size = 0\n",
         "    allfiles = 0\n",
-        "    selectedfiles = 0\n",
+        "    selectedfilescount = 0\n",
         "    files = None\n",
         "    uncomplete_source = \"\"\n",
         "    show = \"\"\n",
@@ -1186,15 +1186,16 @@
         "    bit_rate = \"\"\n",
         "    color_bit_depth = \"\"\n",
         "    video_bit_rate = \"\"\n",
-        "    audio_tracks = None\n",
         "    magnet = \"\"\n",
+        "    add_source = ''\n",
+        "    audio_tracks = None\n",
         "    downloaded_diritems = None\n",
+        "    selectedfilenames = None\n",
         "    total_downloaded = 0\n",
         "    verify_download = None\n",
         "    old_files = None\n",
         "    hasmetadata = False\n",
         "    addmethod = None\n",
-        "    add_source = ''\n",
         "    \n",
         "    def copy(this):\n",
         "        return DownloadAttrs(type_= this.type_,\n",
@@ -2095,15 +2096,16 @@
         "    files = result.files\n",
         "    handle.attrs.full_size = status.total_wanted\n",
         "    handle.full_size = status.total_wanted\n",
+        "    handle.selectedfilenames = []\n",
         "    info(f\"Filtering download files for: {handle.name}.\")\n",
-        "    totalfiles = selectedfiles = total_download = 0\n",
-        "    tf = handle.torrent_file()\n",
-        "    if tf:\n",
+        "    totalfiles = selectedfilescount = total_download = 0\n",
+        "    tor_file = handle.torrent_file()\n",
+        "    if tor_file:\n",
         "        handle.attrs.hasmetadata = True\n",
-        "        allfiles = tf.files()\n",
+        "        allfiles = tor_file.files()\n",
         "        total_download = 0\n",
         "        totalfiles = allfiles.num_files()\n",
-        "        selectedfiles = 0\n",
+        "        selectedfilescount = 0\n",
         "\n",
         "        for i in range(totalfiles):\n",
         "            file = DownloadFile(i, allfiles.file_name(i), allfiles.file_size(i))\n",
@@ -2112,36 +2114,40 @@
         "                handle.file_priority(i,0)\n",
         "                file.selected = False\n",
         "            else:\n",
-        "                selectedfiles += 1\n",
+        "                selectedfilescount += 1\n",
         "                handle.file_priority(i,6)\n",
         "                total_download += file.size\n",
         "                file.selected = True\n",
+        "                handle.selectedfilenames.append(file.name)\n",
         "            files.append(file)\n",
         "    else:\n",
         "        info(handle.name + \" has no metadata.\")\n",
         "        handle.attrs.hasmetadata = False\n",
         "    result.size = total_download\n",
-        "    result.selectedfiles_count = selectedfiles\n",
-        "    handle.selected_files = selectedfiles\n",
+        "    result.selectedfiles_count = selectedfilescount\n",
+        "    handle.selected_files_count = selectedfilescount\n",
         "    handle.attrs.download_size = total_download\n",
         "    handle.attrs.allfiles = totalfiles\n",
-        "    handle.attrs.selectedfiles = selectedfiles\n",
+        "    handle.attrs.selectedfilescount = selectedfilescount\n",
+        "    handle.attrs.selectedfilenames = handle.selectedfilenames\n",
         "    handle.attrs.files = files\n",
         "\n",
         "def selectdownloadfiles(handle, files):\n",
         "    if not handle:\n",
         "        return\n",
         "    totaldownload = 0\n",
-        "    select_files = 0\n",
+        "    select_files_count = 0\n",
+        "    handle.selectedfilenames.clear()\n",
         "    for file in files:\n",
         "        if file.selected:\n",
         "            handle.file_priority(file.index, 6)\n",
+        "            handle.selectedfilenames.append(file.name)\n",
         "            totaldownload += file.size\n",
-        "            select_files += 1\n",
+        "            select_files_count += 1\n",
         "        else:\n",
         "            handle.file_priority(file.index, 0)\n",
         "    handle.total_download = totaldownload\n",
-        "    handle.selected_files = select_files\n",
+        "    handle.selected_files_count = select_files_count\n",
         "    return True\n",
         "  \n",
         "def add_trackers(handle):\n",
@@ -2177,14 +2183,14 @@
         "    info(f\"Cleaning type: {types[attrs.type_]} name: {attrs.name}\")\n",
         "    attrs.downloaded_diritems = []\n",
         "    if attrs.type_ == MOVIE:\n",
-        "        return after_shave_movie(path, attrs.save_name, attrs.downloaded_diritems)\n",
+        "        return after_shave_movie(path, attrs.save_name, attrs.selectedfilenames, attrs.downloaded_diritems)\n",
         "    elif attrs.type_ == SHOW:\n",
         "        return clean_tvshow(path, diritems= attrs.downloaded_diritems)\n",
         "    elif attrs.type_ == SEASON or attrs.type_ == EPISODE:\n",
         "        diritem =  ('', clean_season(path))\n",
         "        attrs.downloaded_diritems.append(diritem)\n",
         "\n",
-        "def after_shave_movie(path, newname, downloaded_diritems = []):\n",
+        "def after_shave_movie(path, newname, selectedfilenames, downloaded_diritems = []):\n",
         "    maindircontent = next(os.walk(path))\n",
         "    originaldiritems = [('/', maindircontent[2])]\n",
         "    for fulldirpath in maindircontent[1]:\n",
@@ -2200,32 +2206,33 @@
         "            fulldirpath =  f\"{path}/{diritem[0]}/\" if diritem[0] else f'{path}/'\n",
         "            info(f\"Checking dir at {fulldirpath}\")\n",
         "            for filename in diritem[1]:\n",
-        "                suffix = ''\n",
-        "                filename_split = os.path.splitext(filename)\n",
-        "                filenamewithoutextension = filename_split[0]\n",
-        "                fileextension = filename_split[1].lower()\n",
-        "                originalfilepath = fulldirpath + filename\n",
-        "                if any(contains(filename, check) for check in skip_list):\n",
-        "                    info(f\"Deleting: {originalfilepath}\")\n",
-        "                    cmd = f'rm \"{originalfilepath}\"'\n",
-        "                    !$cmd\n",
-        "                    continue\n",
-        "                elif  (fileextension == \".mp4\" or fileextension == \".mkv\" or fileextension in subtitlefile_extensions):\n",
-        "                    if fileextension in subtitlefile_extensions: \n",
-        "                        langsearch = langs_pt.findall(filenamewithoutextension)     #if digitssuff_pt.split(filenamewithoutextension)[0] != newname:\n",
-        "                        if langsearch:\n",
-        "                            suffix = f\".{title(langsearch[-1])}\" \n",
-        "                        else:\n",
-        "                            srtcount += 1\n",
-        "                            suffix = f\"-{srtcount}\"\n",
-        "                    if filenamewithoutextension != newname:\n",
-        "                        filenewname = newname + suffix + fileextension\n",
-        "                        info(f\"Renaming: {originalfilepath[36:]} to {filenewname}\")\n",
-        "                        renamedfile = fulldirpath + filenewname\n",
-        "                        cmd = f'mv \"{originalfilepath}\" \"{renamedfile}\"'\n",
+        "                if filename in selectedfilenames:\n",
+        "                    suffix = ''\n",
+        "                    filename_split = os.path.splitext(filename)\n",
+        "                    filenamewithoutextension = filename_split[0]\n",
+        "                    fileextension = filename_split[1].lower()\n",
+        "                    originalfilepath = fulldirpath + filename\n",
+        "                    if any(contains(filename, check) for check in skip_list):\n",
+        "                        info(f\"Deleting: {originalfilepath}\")\n",
+        "                        cmd = f'rm \"{originalfilepath}\"'\n",
         "                        !$cmd\n",
-        "                        filename = filenewname\n",
-        "                    newdiritem[1].append(filename)\n",
+        "                        continue\n",
+        "                    elif  (fileextension == \".mp4\" or fileextension == \".mkv\" or fileextension in subtitlefile_extensions):\n",
+        "                        if fileextension in subtitlefile_extensions: \n",
+        "                            langsearch = langs_pt.findall(filenamewithoutextension)     #if digitssuff_pt.split(filenamewithoutextension)[0] != newname:\n",
+        "                            if langsearch:\n",
+        "                                suffix = f\".{title(langsearch[-1])}\" \n",
+        "                            else:\n",
+        "                                srtcount += 1\n",
+        "                                suffix = f\"-{srtcount}\"\n",
+        "                        if filenamewithoutextension != newname:\n",
+        "                            filenewname = newname + suffix + fileextension\n",
+        "                            info(f\"Renaming: {originalfilepath[36:]} to {filenewname}\")\n",
+        "                            renamedfile = fulldirpath + filenewname\n",
+        "                            cmd = f'mv \"{originalfilepath}\" \"{renamedfile}\"'\n",
+        "                            !$cmd\n",
+        "                            filename = filenewname\n",
+        "                        newdiritem[1].append(filename)\n",
         "            downloaded_diritems.append(newdiritem)\n",
         "    except:\n",
         "        error(ex())\n",
@@ -3419,7 +3426,7 @@
         "\n",
         "#### API / Download files utils\n",
         "\n",
-        "def clean_download_destination(attrs: DownloadAttrs): #disabled temporarly \n",
+        "def clean_download_old_files(attrs: DownloadAttrs): #disabled temporarly \n",
         "    info(f'Cleaning distination for: {attrs.save_name}')\n",
         "    attrs.old_files = set()\n",
         "    delstr = '.del' + nowstr()\n",
@@ -3430,52 +3437,53 @@
         "                for file in diritem[1]:\n",
         "                    lookup1 = episode_exists(attrs.show, season, file)\n",
         "                    if lookup1:\n",
-        "                        p0 = lookup1['foundpath']\n",
-        "                        p1 = os.path.dirname(p0) + '/' + delstr\n",
-        "                        if not os.path.isdir(p1):\n",
-        "                            os.makedirs(p1)\n",
-        "                        info(f'Moving: {p0} to {p1}')\n",
-        "                        rt = !mv \"$p0\" \"$p1\"\n",
-        "                        if rt:\n",
-        "                            error(lines = rt)\n",
-        "                        attrs.old_files.add(p1)\n",
+        "                        oldfilepath = lookup1['foundpath']\n",
+        "                        oldfiletemppath = os.path.dirname(oldfilepath) + '/' + delstr\n",
+        "                        if not os.path.isdir(oldfiletemppath):\n",
+        "                            os.makedirs(oldfiletemppath)\n",
+        "                        info(f'Moving: {oldfilepath} to {oldfiletemppath}')\n",
+        "                        cmd = f'mv \"{oldfilepath}\" \"{oldfiletemppath}\"'\n",
+        "                        output = !$cmd\n",
+        "                        if output:  error(lines = output)\n",
+        "                        attrs.old_files.add(oldfiletemppath)\n",
         "                        info(f'Old file added: {lookup1[\"foundname\"]}')\n",
         "                        if attrs.backup and attrs.baksv: #fixbackup\n",
         "                            for i in range(len(attrs.baksv)):\n",
-        "                                p01 = \"bk\"\n",
-        "                                if os.path.exists(p0):\n",
-        "                                    p11 = \"bk\"\n",
-        "                                    if not os.path.isdir(p11):\n",
-        "                                        os.makedirs(p11)\n",
-        "                                    info(f'Moving: {p01} to {p11}')\n",
-        "                                    rt = !mv \"$p01\" \"$p11\" \n",
-        "                                    if rt:\n",
-        "                                        info(lines = rt)\n",
+        "                                oldfilepath = \"bk\"\n",
+        "                                if os.path.exists(oldfilepath):\n",
+        "                                    oldfiletemppath = \"bk\"\n",
+        "                                    if not os.path.isdir(oldfiletemppath):\n",
+        "                                        os.makedirs(oldfiletemppath)\n",
+        "                                    info(f'Moving: {oldfilepath} to {oldfiletemppath}')\n",
+        "                                    cmd = f'mv \"{oldfilepath}\" \"{oldfiletemppath}\"'\n",
+        "                                    output = !$cmd \n",
+        "                                    if output:  info(lines = output)\n",
         "\n",
-        "    elif attrs.type_ == MOVIE: ### not selected files should be replaced\n",
-        "        p0 = attrs.existing_file \n",
-        "        p1 = attrs.existing_dir + '/' + delstr\n",
-        "        os.makedirs(p1, exist_ok = True)\n",
-        "        info(f'Moving: {p0} to {p1}')\n",
-        "        rt = !mv \"$p0\" \"$p1\"\n",
-        "        if rt:\n",
-        "            info(lines = rt)\n",
-        "        attrs.old_files.add(p1)\n",
+        "    elif attrs.type_ == MOVIE:       ### not selected files should be replaced\n",
+        "        oldfilepath = attrs.existing_file \n",
+        "        oldfiletemppath = attrs.existing_dir + '/' + delstr\n",
+        "        os.makedirs(oldfiletemppath, exist_ok = True)\n",
+        "        info(f'Moving: {oldfilepath} to {oldfiletemppath}')\n",
+        "        cmd = f'mv \"{oldfilepath}\" \"{oldfiletemppath}\"'\n",
+        "        output = !$cmd\n",
+        "        if output:  error(lines = output)\n",
+        "        attrs.old_files.add(oldfiletemppath)\n",
         "        info(f'Old file added: {attrs.existing_file}')\n",
         "        if attrs.backup and attrs.baksv: #fixbackup\n",
-        "            for i in range(1,4):\n",
-        "                p01 = \"bk\"\n",
-        "                if os.path.exists(p0):\n",
-        "                    p11 = \"bk\"\n",
-        "                    if not os.path.isdir(p11):\n",
-        "                        os.makedirs(p11)\n",
-        "                    info(f'Moving: {p01} to {p11}')\n",
-        "                    rt = !mv \"$p01\" \"$p11\" \n",
-        "                    if rt:\n",
-        "                        info(lines = rt)\n",
+        "            for oldfilepath in len(attrs.baksv):\n",
+        "                if os.path.exists(oldfilepath):\n",
+        "                    oldfiletemppath = \"bk\"\n",
+        "                    if not os.path.isdir(oldfiletemppath):\n",
+        "                        os.makedirs(oldfiletemppath)\n",
+        "                    info(f'Moving: {oldfilepath} to {oldfiletemppath}')\n",
+        "                    cmd = f'mv \"{oldfilepath}\" \"{oldfiletemppath}\"'\n",
+        "                    output = !$cmd\n",
+        "                    if output:  info(lines = output)\n",
         "    else:\n",
-        "        return  \n",
+        "        return \n",
         "    info('Cleaning distination done.')\n",
+        "    cmd = ''\n",
+        "    if cmd: pass\n",
         "    \n",
         "def pre_download_transfer(attrs: DownloadAttrs, path):\n",
         "    attrs.verify_download = []\n",
@@ -5182,7 +5190,7 @@
         "        filetablesource['Name'].append(item.name)\n",
         "    return pd.DataFrame(filetablesource)\n",
         "\n",
-        "def makefiletable(files: list[DownloadFile]):\n",
+        "def makedownloadfiletable(files: list[DownloadFile]):\n",
         "    dataframe = getdownloadsdataframe(files)\n",
         "    filetable = pn.widgets.Tabulator(dataframe, \n",
         "                                        sizing_mode= 'stretch_width', \n",
@@ -5215,7 +5223,7 @@
         "        selectstatus_html = HTML(layout= {\"margin\": \"0 0 0 20px\", 'padding': '4px 0 0 0'})\n",
         "        toprow_hbox = HBox((fileselectiontitle, selectall_button, selectintervals_text, selectintervals_button, savefiles_button, selectstatus_html), layout= {'width': '100%', 'height':'62px'})\n",
         "\n",
-        "        filetable = makefiletable(files)\n",
+        "        filetable = makedownloadfiletable(files)\n",
         "        filetableoutput = Output()\n",
         "        result.filetable = filetable\n",
         "        result.filetableoutput = filetableoutput\n",
@@ -5247,7 +5255,7 @@
         "                color = SUCCESS_COLOR\n",
         "                statusstr = \"Files selected successfully.\"\n",
         "                appstate.total_wanted -= result.size\n",
-        "                result.selectedfiles_count = handle.selected_files\n",
+        "                result.selectedfiles_count = handle.selected_files_count\n",
         "                result.size = handle.total_download\n",
         "                appstate.total_wanted += result.size\n",
         "                setfilesandsizeinfoview(result)\n",
